# DestekMAU

./: .gitignore  README.md
backend/: CMakeLists.txt  destek_api
backend/src/: main.cpp
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  auth.jsx  index.css  main.jsx
frontend/src/pages/: AssignPage.css  AssignPage.jsx  DashboardLayout.css  DashboardLayout.jsx  LoginPage.css  LoginPage.jsx  NewTicketPage.css  NewTicketPage.jsx  NewUserPage.css  NewUserPage.jsx  StreamPage.css  StreamPage.jsx  TicketDetailPage.css  TicketDetailPage.jsx
frontend/src/styles/: components.css
örnek tasarım/: IMG_8250.HEIC  IMG_8251.HEIC  IMG_8252.HEIC
